* implement persistend red-black tree with basic operations * implement player registration and rollback in ranking library * add basic tests

--- a/msvc/vs2017/tests/PlayerRanking.Tests.vcxproj.filters
+++ b/msvc/vs2017/tests/PlayerRanking.Tests.vcxproj.filters
@@ -18,7 +18,10 @@
     <ClCompile Include="..\..\..\src\test\PlayerRankingDB.Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\utils\unittest\googletest\src\gtest_main.cc">
+    <ClCompile Include="..\..\..\src\test\PersistentRedBlackTree.Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\test\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
