--- a/msvc/vs2017/lib/PlayerRanking.vcxproj.filters
+++ b/msvc/vs2017/lib/PlayerRanking.vcxproj.filters
@@ -23,5 +23,11 @@
     <ClInclude Include="..\..\..\include\PlayerRankingDB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\PersistentRedBlackTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\PersistentRedBlackTree.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
